@@ -1,5 +1,12 @@
 2002-11-05 Damien Sandras  <dsandras@seconix.com>
 
+	* configure.in: Removed Speex checks. All Unix versions running
+	OpenH323 CVS automatically have Speex.
+
+	* src/main_window.cpp: Add Speex automatically for 0.95 versions.
+	
+2002-11-05 Damien Sandras  <dsandras@seconix.com>
+
 	* configure.in: Upgraded to version 0.95.0.
 	
 2002-11-04 Damien Sandras  <dsandras@seconix.com>
